# MVTec-AD

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.0-jame-test-libs.ipynb  1.0-jame-dowload-dataset.ipynb  1.0-jame-test-libs.ipynb  2.0-jame-kaggle-repeat.ipynb  3.0-jame-PatchCore.ipynb  4.0-jame-CRAD.ipynb  5.0-jame-Anomalib.ipynb
