[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "industrial_anomaly_detector"
version = "0.0.1"
description = "Using CNN to predict quality problems in industrial appliences"
authors = [
  { name = "Moreno Esparza J.A." },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["industrial_anomaly_detector"]
include = ["pyproject.toml", "industrial_anomaly_detector/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["industrial_anomaly_detector"]
force-sort-within-sections = true

